# trajcontrol_jhu

./: 3DSlicer INSTRUCTIONS.txt  README.md  ROS2 command line examples for LISA robot.txt  ROS2 command line examples for SmartTemplate robot.txt  comm_diagram.txt  package.xml  setup.py
config/: demo_params.yaml  virtual_nodes_params.yaml
data/: .~lock.my_data.csv#  2023-05-11_horizontal.csv  2023-05-11_horizontal_WRONG.csv  2023-05-11_straight.csv  2023-05-11_vertical.csv  create_matlab_workspace_jhu.m  demo.csv  my_data.csv  my_data_pred.mat
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/: demo.launch.py  demo_lisa.launch.py  demo_smart.launch.py  deprecated_real_test.launch.py  jhu_needle.launch.py  manual_smart.launch.py  mpc_step.launch.py  smartneedle_demo.launch.py  smartneedle_experiment.launch.py  virtual_nodes.launch.py
log/: latest_build
trajcontrol/: controller_manual_smart.py  controller_mpc.py  controller_node.py  depthMeasurement.py  depth_measurement.py  estimator.py  estimator_node.py  jhu_estimator_node.py  jhu_keypress.py  jhu_save_file.py  mri_tracking_interface.py  package.xml  planning.py  save_file.py  sensor_processing.py  sensor_processing_step.py  setup.py  smart_needle_interface.py  system_interface.py  system_interface_lisa.py  system_interface_smart.py  trajcontrol_demo.py  trajcontrol_demo_depth.py  trajcontrol_demo_step.py  user_interface.py  virtual_needle.py  (+4 more)
trajcontrol_interfaces/: CMakeLists.txt  README.md  package.xml
trajcontrol_interfaces/srv/: GetJacobian.srv  GetPoint.srv  GetPose.srv
(+54 files in other folders)
